--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
@@ -31,7 +31,7 @@
                 </li>
 
                 <li class="nav-bar__item">
-                    <a class="nav-bar__link" href="#related-games"><i class="fas fa-dice-d6"></i>More Games</a>
+                    <a class="nav-bar__link" href="#more-games"><i class="fas fa-dice-d6"></i>More Games</a>
                 </li>
             </ul>
         </nav>
@@ -43,19 +43,19 @@
                 <h1>Republic of Games</h1>
                 <p>Check Out The Warld of Gaming With THE Best Games COllection OF All Time .
                 </p>
-                <a href="#related-games" class="btn">MORE GAMES</a>
+                <a href="#more-games" class="btn">MORE GAMES</a>
             </header>
 
             <div class="top-container__top-box top-box-a">
                 <h4>Halo </h4>
                 <p class="top-container__top-box__price">$99</p>
-                <a href="#" class="btn">Buy Now</a>
+                <a href="https://www.halowaypoint.com/en-gb" class="btn">Buy Now</a>
             </div>
 
             <div class="top-container__top-box top-box-b">
                 <h4>Counter-Strike </h4>
                 <p class="top-container__top-box__price">$149</p>
-                <a href="#" class="btn">Buy Now</a>
+                <a href="https://blog.counter-strike.net/" class="btn">Buy Now</a>
             </div>
         </section>
 
