--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
@@ -106,21 +106,21 @@
                     Valve and Hidden Path Entertainment. It is the fourth game in the
                     Counter-Strike series. Developed for over two years, Global Offensive was released for Windows,
                     macOS, Xbox 360, and PlayStation 3 in August 2012, and for Linux in 2014.</p>
-                <a href="#" class="btn">BUY NOW</a>
+                <a href="https://blog.counter-strike.net/" class="btn">BUY NOW</a>
             </div>
         </section>
 
         <!-- Related-Games -->
 
-        <section class="related-games" id="related-games">
-            <img class="related-games__img" src="IMG/cs-cz.jpg" alt="cs-cz">
-            <img class="related-games__img" src="IMG/cs-s.jpg" alt="cs-s">
-            <img class="related-games__img" src="IMG/farcry3.jpg" alt="farcry3">
-            <img class="related-games__img" src="IMG/farcry4.jpg" alt="farcry4">
-            <img class="related-games__img" src="IMG/farcry5.jpg" alt="farcry5">
-            <img class="related-games__img" src="IMG/halo mc.jpg" alt="halo-mc">
-            <img class="related-games__img" src="IMG/hl-2.jpg" alt="hl-2">
-            <img class="related-games__img" src="IMG/hl.jpg" alt="hl-1">
+        <section class="more-games" id="more-games">
+            <img class="more-games__img" src="IMG/cs-cz.jpg" alt="cs-cz">
+            <img class="more-games__img" src="IMG/cs-s.jpg" alt="cs-s">
+            <img class="more-games__img" src="IMG/farcry3.jpg" alt="farcry3">
+            <img class="more-games__img" src="IMG/farcry4.jpg" alt="farcry4">
+            <img class="more-games__img" src="IMG/farcry5.jpg" alt="farcry5">
+            <img class="more-games__img" src="IMG/halo mc.jpg" alt="halo-mc">
+            <img class="more-games__img" src="IMG/hl-2.jpg" alt="hl-2">
+            <img class="more-games__img" src="IMG/hl.jpg" alt="hl-1">
         </section>
 
         <!-- FOOTER -->
