--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
@@ -110,7 +110,7 @@
             </div>
         </section>
 
-        <!-- Related-Games -->
+        <!-- more-games -->
 
         <section class="more-games" id="more-games">
             <img class="more-games__img" src="IMG/cs-cz.jpg" alt="cs-cz">
