--- a/01-HTML-CSS/07-SCSS/marina/marina-GameSite/GameSite.html
+++ b/01-HTML-CSS/07-SCSS/marina/marina-GameSite/GameSite.html
@@ -216,7 +216,9 @@
 
         </div>
 
-        <div class="emptySeparator2"></div>
+        <div class="footer">
+            <p>Copyright ©2021 Addicting Games, Inc.</p>
+        </div>
 
     </div>
 
