--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+    <form action="/action_page.php" style="float:right;padding: 10px;margin: 0px; ">
+        <label for="w3review" style="font-size: 35px;background-color: tan;border: solid black; border-radius: 10px;">search:</label>
+        <textarea id="w3review" name="w3review" rows="1" cols="25" style="font-size: 28px;background-color: royalblue;">
+          </textarea>
+        </form>
 <img  src="img/[removal.ai]_tmp-61a7a8bb8848e.png" alt="">
 <!--///////////////////////////-header/flex-///////////////////////////////////////-->
 <ul class="header">
@@ -21,15 +26,15 @@
     <il><a href "#"> games</a></il>
     <il><a href "#">A-Z</a></il>
     <il><a href "#"> favorite</a> </il>
-    <!--/>>>>>>>>>>>font awusome not work i don't know why<<<<<<<<<<<<<<-->
-    <a href=""><i class="fas fa-search " style="font-size: 46; color: white; border: solid red; width: 100px; justify-content: end; "></i><i class="fas fa-search"></i></a>
-</ul>
+   
+    
+</ul> 
 <!--///////////////////////////-mainMmenu/grid-///////////////////////////////////////-->
 <div class="menu2">
-<div class="box m1 "><a href="">acion</a> </div>
-<div class="box m2"><a href="">team</a> </div>
-<div class="box m3"><a href=""> solo</a></div>
-<div class="box m4"><a href=""> favorite</a></div>
+<div class="box m1 "><a href=""class="text">acion</a> </div>
+<div class="box m2"><a href="" class="text">team</a> </div>
+<div class="box m3"><a href="" class="text"> solo</a></div>
+<div class="box m4"><a href="" class="text"> favorite</a></div>
 </div>
 
 
