--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -88,7 +88,7 @@
         <div class="box"><img src="img/g27.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g29.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g28.jpg" alt=""><a href=""><p class="text">Lorem part1  </p></a></div>
-        <div class="box"><img src="img/g28.jpg" alt=""><a href=""><p class="text">Lorem part2🤣  </p></a></div>
+        <div class="box"><img src="img/g28.jpg" alt=""><a href=""><p class="text">Lorem part2  </p></a></div>
     </div>
     
 <!--//////////////////////////////-<footer>-////////////////////////////////////-->
