--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
@@ -24,11 +24,12 @@
 
         <div class="header__element logo">
 
-            <img src="img/addictinggames.png" alt="">
+            <img class="logobig" src="img/addictinggames.png" alt="">
+            <img class="logosmall" src="img/Logo2.png" alt="" >
 
         </div>
 
-        <div class="header__element">
+        <div class="header__element srch">
 
             <div class="searchbox">
 
@@ -39,6 +40,7 @@
                     <i class="fas fa-search"></i>
 
                 </a>
+
             </div>
 
         </div>
@@ -83,6 +85,12 @@
                     Login
                 </div>
 
+                <a class="accbtn">
+
+                    <i class="fas fa-user-circle"></i>
+                    
+                </a>
+
             </div>
 
         </div>
@@ -90,6 +98,10 @@
     </section>
 
     <section class="menubar">
+
+        <div class="scroll"> 
+            scroll <-- -->
+        </div>
 
         <div class="menubar__cards">
 
@@ -151,54 +163,57 @@
 
             <div class="card">
 
-                <img src="img/Shooter.png" alt="">
-                <p>Shooter</p>
-
-            </div>
-            <div class="card">
-
-                <img src="img/Shooter.png" alt="">
-                <p>Shooter</p>
-
-            </div>
-            <div class="card">
-
-                <img src="img/Shooter.png" alt="">
-                <p>Shooter</p>
-
-            </div>
-            <div class="card">
-
-                <img src="img/Shooter.png" alt="">
-                <p>Shooter</p>
+                <img src="https://www.addictinggames.com/sites/default/files/styles/tag_image/public/action-games.png" alt="">
+                <p>Action</p>
 
             </div>
 
             <div class="card">
 
-                <img src="img/Shooter.png" alt="">
-                <p>Shooter</p>
+                <img src="https://www.addictinggames.com/sites/default/files/styles/tag_image/public/funny-games.png" alt="">
+                <p>Funny</p>
 
             </div>
 
             <div class="card">
 
-                <img src="img/Shooter.png" alt="">
-                <p>Shooter</p>
+                <img src="https://www.addictinggames.com/sites/default/files/styles/tag_image/public/cute.png" alt="">
+                <p>Cute</p>
 
             </div>
 
             <div class="card">
 
-                <img src="img/Shooter.png" alt="">
-                <p>Shooter</p>
+                <img src="https://www.addictinggames.com/sites/default/files/styles/tag_image/public/Wall-Runner_0.jpg" alt="">
+                <p>Endless Runner</p>
 
             </div>
 
             <div class="card">
 
-                <img src="img/Shooter.png" alt="">
-                <p>Shooter</p>
+                <img src="https://www.addictinggames.com/sites/default/files/styles/tag_image/public/clicker-games.jpg" alt="">
+                <p>Clicker</p>
+
+            </div>
+
+            <div class="card">
+
+                <img src="https://www.addictinggames.com/sites/default/files/styles/tag_image/public/Puzzle_Icon.png" alt="">
+                <p>Puzzle</p>
+
+            </div>
+
+            <div class="card">
+
+                <img src="https://www.addictinggames.com/sites/default/files/styles/tag_image/public/shooter-games.jpg" alt="">
+                <p>Shooting</p>
+
+            </div>
+
+            <div class="card">
+
+                <img src="https://www.addictinggames.com/sites/default/files/styles/tag_image/public/zombie-games.png" alt="">
+                <p>Zombie</p>
 
             </div>
 
