--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -33,7 +33,7 @@
 <div class="menu2">
 <div class="box m1 "><a href=""class="text">acion</a> </div>
 <div class="box m2"><a href="" class="text">team</a> </div>
-<div class="box m3"><a href="" class="text"> solo</a></div>
+<div class="box m3"><a href="" class="text">solo</a></div>
 <div class="box m4"><a href="" class="text"> favorite</a></div>
 </div>
 
@@ -43,7 +43,8 @@
 
 <h1>MOST ADDICTING GAMES</h1>
     <div class="main">
-        <div class="box gmain " ><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box gmain  " style="background-image:url('https://image.winudf.com/v2/image/Y29tLndGb3J0bml0ZTRLXzczMjYzNjBfc2NyZWVuXzBfMTUyOTA1MTIyNl8wMTU/screen-0.jpg?fakeurl=1&type=.jpg');
+        background-size: 100% 100%;"><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box item1"><img src="img/g10.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box item2"><img src="img/g11.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box item3"><img src="img/g12.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
@@ -80,7 +81,8 @@
 <!--///////////////////////////-game/grid4-///////////////////////////////////////-->   
     <h1>CLASSIC GAMES</h1>
     <div class="main">
-        <div class="box gmain"><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box gmain " style="background-image:url('https://image.winudf.com/v2/image/Y29tLndGb3J0bml0ZTRLXzczMjYzNjBfc2NyZWVuXzBfMTUyOTA1MTIyNl8wMTU/screen-0.jpg?fakeurl=1&type=.jpg');
+        background-size: 100% 100%;" ><p class="text">Lorem ipsum  </p></a></div>
         <div class="box item1"><img src="img/g23.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box item2"><img src="img/g24.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box item3"><img src="img/g25.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
