Create test files

--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist\Gaming_Lior.css">
     <link rel="stylesheet" href="dist\test.css">
+
     <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
     <title>Gaming store</title>
 </head>
@@ -27,9 +28,9 @@
             </ul>
         </div>
     </div>
-
+    <div class="test">
 <!--Action-Adventure Game--> 
-    <div class="container">
+    <div class="container Action-Adventure">
         <div class="container__box--header">
             <div class="container__box--header__content">
             <h4>Action-Adventure Game</h4>
@@ -37,13 +38,11 @@
             <button class="container__box--header__content__btn btn">Add to cart <i class="fas fa-shopping-cart"></i></button>
             <button class="container__box--header__content__btn btn"> Sign-Up <i class="fas fa-gamepad"></i></button>
             <button class="container__box--header__content__btn btn"> Login <i class="fas fa-sign-in-alt"></i></i></button>
-
         </div>
         </div>
         <div class="container__box game_1">
             <div class="container__box__content ">
             <h2 class="container__box__title"> Assassin's Creed valhalla</h2>
-            <img src="" alt="">
             <div class="container__box__description">
                 <p>
                     The plot follows a modern-day man named Callum Lynch who, through a machine called the Animus, explores the memories of his 
@@ -55,10 +54,16 @@
             </a>
         </div>
         </div>
+
+
+
+
+
+
+        
         <div class="container__box game_2">
             <div class="container__box__content">
             <h2 class="container__box__title"> God of War Ragnarok </h2>
-            <img src="" alt="">
             <div class="container__box__description">
                 <p>
                     The story follows the titular protagonist, Kratos, a Spartan warrior and later the God of War, who was tricked into killing his family by his former master                </p>
@@ -71,7 +76,6 @@
         <div class="container__box game_3">
             <div class="container__box__content">
             <h2 class="container__box__title"> Call of Duty - Modern Warfare</h2>
-            <img src="" alt="">
             <div class="container__box__description">
                 <p>
                     They introduced an entirely new engine for the game, which allows for new performance enhancements such as more detailed environments and ray-tracing capabilities. </p>
@@ -84,7 +88,6 @@
         <div class="container__box game_4">
             <div class="container__box__content">
             <h2 class="container__box__title"> Star Wars - The fallen Jedi Order</h2>
-            <img src="" alt="">
             <div class="container__box__description">
                 <p>
                     The story, set in the Star Wars universe five years after Star Wars: Episode III – Revenge of the Sith, follows Jedi Padawan Cal Kestis,</p>
@@ -97,7 +100,6 @@
         <div class="container__box game_5">
             <div class="container__box__content">
             <h2 class="container__box__title"> Horizon Zero Dawn</h2>
-            <img src="" alt="">
             <div class="container__box__description">
                 <p>
                     The plot follows Aloy, a young hunter in a world overrun by machines, who sets out to uncover her past
@@ -112,7 +114,6 @@
         <div class="container__box game_6">
             <div class="container__box__content">
             <h2 class="container__box__title"> Gotham Knights</h2>
-            <img src="" alt="">
             <div class="container__box__description">
                 <p>
                     Gotham Knights is an open-world, action RPG set in the most dynamic and interactive Gotham City yet. In either solo-play or with one other hero, patrol Gotham’s five distinct boroughs and drop in on criminal activity wherever you find it.                </p>
@@ -149,6 +150,8 @@
         </div>
         </div>
     </div>
+
+
     <!--Sport games-->
     <div class="container sport">
         <div class="container__box--header">
@@ -385,5 +388,7 @@
             </a>
         </div>
         </div>
+    </div>
+</div>
 </body>
 </html>
