shani scss responsive

--- a/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
@@ -26,8 +26,9 @@
 
         <div class="games adventure one">
             <h2>ADVENTURE GAMES</h2>
-            <div class="hover">
-                <img src="img/redbeard1.jpg">
+            <div class="hover imgeffect">
+                <img src="img/redbeard2.jpg" class="img-front">
+                <img src="img/redbeard1.jpg" class="img-back">
                 <p>RED BEARD</p>
             </div>
         </div>
