--- a/01-HTML-CSS/07-SCSS/Tal/KheMich/index.html
+++ b/01-HTML-CSS/07-SCSS/Tal/KheMich/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="header_name">
-            <h1>Ggayming</h1>
+            <h1>GGaming</h1>
         </div>
         <div class="header_search">
             <p>search games</p>
