--- a/01-HTML-CSS/07-SCSS/Or/HomeTask/second.html
+++ b/01-HTML-CSS/07-SCSS/Or/HomeTask/second.html
@@ -30,11 +30,8 @@
 
 
     </div>
-    <a id="foot"></a>
+    <h1>My Favourite Players</h1>
     <div class="wrapper">
-        <!-- <div class="box box__header">
-            <h1 class="box__h1">Football</h1>
-        </div> -->
         <div class="box box__big1">
             <img src="https://www.biography.com/.image/t_share/MTc5OTQ5OTg4NjY5ODI2MTcw/gettyimages-971463110.jpg"
                 alt="">
@@ -70,12 +67,6 @@
             <p class="box__names">Iker Csillas</p>
         </div>
 
-
-
-        <!-- <div class="box box__second-header">
-            <a id="basket"></a>
-            <h1 class="box__h1">Basketball</h1>
-        </div> -->
         <div class="box box__big2">
             <img src="https://cdn.vox-cdn.com/thumbor/zlyL0God4w2kn5rQF7R7PDAdupU=/0x0:6487x4328/1200x800/filters:focal(2660x522:3696x1558)/cdn.vox-cdn.com/uploads/chorus_image/image/70147132/1353312441.0.jpg"
                 alt="">
