--- a/01-HTML-CSS/08-Responsive/Game Site Leon/index.html
+++ b/01-HTML-CSS/08-Responsive/Game Site Leon/index.html
@@ -35,7 +35,7 @@
                 Zombies</div>
         </div>
         <div class="actiongames"><h1><i class="fab fa-playstation"></i> Action Games</h1>
-            <div class="box" style="background-image: url(img/action.jpg);">Call Of Duty</div>
+            <div class="box" style="background-image: url(https://media.giphy.com/media/d8i1XJjV2Ym53KK0Dn/giphy.gif);">Call Of Duty</div>
             <div class="box" style="background-image: url(img/action.jpg);">Call Of Duty</div>
             <div class="box" style="background-image: url(img/action.jpg);">Call Of Duty</div>
             <div class="box" style="background-image: url(img/action.jpg);">Call Of Duty</div>
@@ -46,7 +46,7 @@
             <div class="box" style="background-image: url(img/action.jpg);">Call Of Duty</div>
         </div>
         <div class="sportgames"><h1><i class="far fa-futbol"></i> Sport Games</h1>
-            <div class="box" style="background-image: url(img/sports-games.jpeg);">Fifa</div>
+            <div class="box" style="background-image: url(https://media.giphy.com/media/2zbmIjWXTCGeOz8JDn/giphy.gif);">Fifa</div>
             <div class="box" style="background-image: url(img/sports-games.jpeg);">Fifa</div>
             <div class="box" style="background-image: url(img/sports-games.jpeg);">Fifa</div>
             <div class="box" style="background-image: url(img/sports-games.jpeg);">Fifa</div>
@@ -57,7 +57,7 @@
             <div class="box" style="background-image: url(img/sports-games.jpeg);">Fifa</div>
         </div>
         <div class="shooting"><h1><i class="fas fa-fighter-jet"></i> Shooting</h1>
-        <div class="box" style="background-image: url(img/shooting.jpeg);">Sniper</div>
+        <div class="box" style="background-image: url(https://media.giphy.com/media/YHUZxlHvk4GIA5mT8N/giphy.gif);">Sniper</div>
         <div class="box" style="background-image: url(img/shooting.jpeg);">Sniper</div>
         <div class="box" style="background-image: url(img/shooting.jpeg);">Sniper</div>
         <div class="box" style="background-image: url(img/shooting.jpeg);">Sniper</div>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="zombies"><h1><i class="fas fa-biohazard"></i> Zombie-Games</h1>
-            <div class="box" style="background-image: url(img/Zombie-Games.jpg);">Zombie Land</div>
+            <div class="box" style="background-image: url(https://media.giphy.com/media/3oKIPifDGiCdI8XTUI/giphy.gif);">Zombie Land</div>
             <div class="box" style="background-image: url(img/Zombie-Games.jpg);">Zombie Land</div>
             <div class="box" style="background-image: url(img/Zombie-Games.jpg);">Zombie Land</div>
             <div class="box" style="background-image: url(img/Zombie-Games.jpg);">Zombie Land</div>
