--- a/01-HTML-CSS/08-Responsive/Lior/RESPONSIVE_HM.html
+++ b/01-HTML-CSS/08-Responsive/Lior/RESPONSIVE_HM.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist\test.css">
     <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Lior's gaming store</title>
 </head>
 <body>
 
@@ -20,10 +20,6 @@
                 <li> <a href=" ">About</a></li> 
                 <li> <a href="">Community</a></li> 
                 <li> <a href=" ">Support</a></li> 
-                <div class="banner__navbar__search_box">
-                <input class="banner__navbar__search_box__search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
-                <a class="banner__navbar__search_box__Search-btn" href=""><i class="fas fa-search"></i></a>
-                </div>
             </ul>
         </div>
     </div>
