--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -22,10 +22,10 @@
 <img  src="img/[removal.ai]_tmp-61a7a8bb8848e.png" alt="">
 <!--///////////////////////////-header/flex-///////////////////////////////////////-->
 <ul class="header">
-    <il><a href "#">Home</a></a></il>
-    <il><a href "#"> games</a></il>
-    <il><a href "#">A-Z</a></il>
-    <il><a href "#"> favorite</a> </il>
+    <il><a href = "index.html">Home</a></il>
+    <il><a href = "#"> games</a></il>
+    <il><a href = "#">A-Z</a></il>
+    <il><a href = "#"> favorite</a> </il>
    
     
 </ul> 
@@ -39,7 +39,7 @@
 
 
 <!--///////////////////////////-main game/ grid-///////////////////////////////////////-->
-<i class="fas fa-search" style="color: white;"></i>
+
 
 <h1>MOST ADDICTING GAMES</h1>
     <div class="main">
@@ -54,7 +54,7 @@
 
 <!--////////////////////////-Game/grid2/-//////////////////////////////////////////-->
     <h1>NEW GAMES </h1>
-    <div class="num2">
+    <div class="articil2">
         <div class="box"><img src="img/g2.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g3.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g4.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
@@ -67,7 +67,7 @@
    
 <!--/////////////////////////-/gamegrid3-/////////////////////////////////////////-->
     <h1>TRENDING GAMES</h1>
-    <div class="num3">
+    <div class="articil3">
         <div class="box"><img src="img/g14.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g15.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g16.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
