--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -30,11 +30,11 @@
     
 </ul> 
 <!--///////////////////////////-mainMmenu/grid-///////////////////////////////////////-->
-<div class="menu2">
+<div class="navmenu2">
 <div class="box m1 "><a href=""class="text">acion</a> </div>
 <div class="box m2"><a href="" class="text">team</a> </div>
 <div class="box m3"><a href="" class="text">solo</a></div>
-<div class="box m4"><a href="" class="text"> favorite</a></div>
+<div class="box m4"><a href="" class="text">favorite</a></div>
 </div>
 
 
