--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -14,11 +14,8 @@
 </head>
 
 <body>
-    <form action="/action_page.php" style="float:right;padding: 10px;margin: 0px; ">
-        <label for="w3review" style="font-size: 35px;background-color: tan;border: solid black; border-radius: 10px;">search:</label>
-        <textarea id="w3review" name="w3review" rows="1" cols="25" style="font-size: 28px;background-color: royalblue;">
-          </textarea>
-        </form>
+    <input type="search" name="search" id="found" aria-label="Search through site content">
+    <button>searsch</button>
 <img  src="img/[removal.ai]_tmp-61a7a8bb8848e.png" alt="">
 <!--///////////////////////////-header/flex-///////////////////////////////////////-->
 <ul class="header">
