--- a/01-HTML-CSS/08-Responsive/chaim/index.html
+++ b/01-HTML-CSS/08-Responsive/chaim/index.html
@@ -5,27 +5,108 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="dist/style.css">
     <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="dist/style.css">
 </head>
-
 <body>
- <div class="wrapper">
-         <article><img src="6b1fd4dda59c17b595287eeb94cd8b0c.png" alt="">
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis eligendi officia laboriosam molestias totam tempora cupiditate! Amet dolores molestias assumenda, reprehenderit omnis ipsam deserunt autem ducimus commodi odio facere aliquid.</article>  </article>
-    <article><img src="6b1fd4dda59c17b595287eeb94cd8b0c.png" alt="">
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque distinctio dolore, optio culpa reiciendis repellendus et eligendi quibusdam tempore sunt quos excepturi eius earum consequuntur sit ducimus ex sequi dolorum!
-    </article>
-        <article><img src="6b1fd4dda59c17b595287eeb94cd8b0c.png" alt="">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat asperiores deleniti eaque, temporibus veritatis earum distinctio reiciendis. Dolores laudantium dolor deserunt minus, rerum, blanditiis quaerat illum, accusamus saepe velit optio!
-    </article>
-     <article><img src="6b1fd4dda59c17b595287eeb94cd8b0c.png" alt="">
-     dolor sit amet consectetur adipisicing elit. Atque distinctio dolore, optio culpa reiciendis 
-    repellendus et eligendi quibusdam tempore sunt quos excepturi eius earum consequuntur sit ducimus ex sequi dolorum!</article>
-      </article>
-      <article><img src="6b1fd4dda59c17b595287eeb94cd8b0c.png" alt="">
-      dolor sit amet consectetur adipisicing elit. Atque distinctio dolore, optio culpa reiciendis 
-      repellendus et eligendi quibusdam tempore sunt quos excepturi eius earum consequuntur sit ducimus ex sequi dolorum!</article>
+    <div class="wrapper">
+      <article>
+  <img src="1.jpg" alt="">
+ <p>Lorem ipsum dolor sit amet consectetur, adipist.</p></article>
+  <article>
+  <img src="2.jpg" alt="">
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p></article>
+   <article>
+   <img src="3.jpg" alt="">
+   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p></article>
+  <article>
+    <img src="4.jpg" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p></article>
+  <article>
+   <img src="5.jpg" alt="">
+   <p>dkfgnbklcckmzLorem ipsum dolor sit amet.</p></article>
+  <article>
+     <img src="6.jpg" alt="">
+     <p>hjhgmkjkjlk;l'fg.</p></article>
+     <article>
+      <img src="7.jpg" alt=""> 
+      <p>dkfgnbklcckmz>jgnvklcslkLorem.</p></article>
+      <article>
+   <img src="8.jpg" alt="">
+   <p>dkfgnbklcckmzjukukl</p></article>
+   <article>
+     <img src="9.jpg" alt="">
+   </article>
+   <article>
+    <img src="10.jpg" alt="">
+    <p>dkfgnbklcckmzjgnvklcslkLorem ips </p></article>
+    <article>
+    <img src="11.jpg" alt="">
+    <p>jgnvklcslkLorem ipsum dolo</p></article>  
+    <article>
+      <img src="12.jpg" alt="">
+      <p>dkfgnbklcgnvklcslkLorem ip </p></article>                                                                                          
+      <article>
+      <img src="13.jpg" alt="">
+      <p>dkfgnbklcck>jgnvklcslkLorem ips </p></article>
+      <article>
+     <img src="14.jpg" alt="">
+     <p>dkfgnbklcckmz</p></article>
+     <article>
+      <img src="15.jpg" alt="">
+      <p>dkfgnbklcckmz</p></article>
 
+     <article>
+     <img src="15.jpg" alt="">
+     <p>dkfgnbklcckmz</p></article>
+     <article>
+     <img src="16.jpg" alt="">
+      <p>dkfgnbklcckmz</p></article>
+     <article>
+      <img src="17.jpg" alt="">
+     <p>dkfgnbklcckmz</p></article>
+     <article>
+    <img src="18.jpg" alt="">
+     <p>dkfgnbklcckmz</p></article>
+     <article>
+    <img src="19.jpg" alt="">
+     <p>dkfgnbklcckmz</p></article>
+     <article>
+    <img src="20.jpg" alt="">
+   <p>dkfgnbklcckmz</p></article>
+   <article>
+    <img src="11.jpg" alt="">
+     <p>dkfgnbklcckmz</p></article>
+     <article>
+    <img src="12.jpg" alt="">
+    <p>dkfgnbklcckmz</p></article>
+    <article>
+    <img src="13.jpg" alt="">
+     <p>dkfgnbklcckmz</p></article>
+     <article>
+       <img src="5.jpg" alt="">
+     </article>
+     <article>
+       <img src="3.jpg" alt="">
+       <p>kvcnklc</p></article>
+       <article>
+        <img src="4.jpg" alt="">
+        <p>jfdnlksklj</p></article>
+        <article>
+       <img src="5.jpg" alt="">
+       <p>dkfgnbklcckmz</p></article>
+       <article>
+         <img src="6.jpg" alt="">
+         <p>jgnvklcslk</p></article>
+         <article>
+          <img src="7.jpg" alt="">
+          <p>dkfgnbklcckmz</p></article>
+          <article>
+       <img src="8.jpg" alt="">
+       <p>dkfgnbklcckmz</p></article>
+       <article>
+       <img src="9.jpg" alt="">
+        <p>dkfgnbklcckmz</p></article>
+    </div>
 </body>
 </html>
