--- a/01-HTML-CSS/09-animations/RASHEED/index.html
+++ b/01-HTML-CSS/09-animations/RASHEED/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="box"></div>
+    <div class="box">Halo</div>
+    <div class="box">Halo</div>
+    <div class="box">Halo</div>
+    <div class="box">Halo</div>
+
 </body>
 </html>
