--- a/01-HTML-CSS/09-animations/Jenia/index.html
+++ b/01-HTML-CSS/09-animations/Jenia/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="/01-HTML-CSS/09-animations/Jenia/dist/style.css">
     <title>Document</title>
 </head>
 
