--- a/01-HTML-CSS/09-animations/Etan/index.html
+++ b/01-HTML-CSS/09-animations/Etan/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <a href="https://www.w3schools.com/css/css3_animations.asp">W3 school</a>
-    <a href="https://material.io/design/motion/understanding-motion.html">Google animations</a>
     
-    <div class="box"></div>
+    <a  href="https://material.io/design/motion/understanding-motion.html">Google animations</a>
+    <div class="container">
+    <div class="box">
+        <a id="W3" href="https://www.w3schools.com/css/css3_animations.asp">W3 school</a>
+    </div>
+    </div>
 </body>
 </html>
