--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
@@ -7,10 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="dist/style.css">
     <script src="https://kit.fontawesome.com/36261c0ffe.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&family=Comforter+Brush&family=Inconsolata:wght@700&family=M+PLUS+Code+Latin:wght@100;300&family=Montserrat:ital,wght@1,100&family=Source+Code+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header_categories">
-        <div class="icon" style="font-size: 84px;">
+        <div class="icon" style="font-size: 44px;">
             <i class="fas fa-long-arrow-alt-left"></i>
         </div>
        <div class="header_categories_text">
@@ -26,23 +29,44 @@
     </div>
 
     <div class="plantsGrid">
-        <div class="plantsGrid_boxitem1" style="background-image: url(img/plant1.jpg);">
+        <div class="plantsGrid_boxitem" style="background-image: url(img/plant1.jpg);">
             <h1>Milanus</h1>
+            <h2>Tropical</h2>
         </div>
-        <div class="plantsGrid_boxitem2" style="background-image: url(img/plant2.jpg);">
+        <div class="plantsGrid_boxitem" style="background-image: url(img/plant2.jpg);">
             <h1>Excelsa</h1>
+            <h2>Suculent</h2>
         </div>
-        <div class="plantsGrid_boxitem3" style="background-image: url(img/plant3.jpeg);">
+        <div class="plantsGrid_boxitem" style="background-image: url(img/plant3.jpeg);">
             <h1>Prometheus</h1>
+            <h2>Fruity</h2>
         </div>
-        <div class="plantsGrid_boxitem4" style="background-image: url(img/plant4.jpeg);">
+        <div class="plantsGrid_boxitem" style="background-image: url(img/plant4.jpeg);">
             <h1>Convenant</h1>
+            <h2>Bonsai</h2>
         </div>
-        <div class="plantsGrid_boxitem5" style="background-image: url(img/plant5.jpeg);">
+        <div class="plantsGrid_boxitem" style="background-image: url(img/plant5.jpeg);">
             <h1>Fruticosa</h1>
+            <h2>Ferns</h2>
         </div>
-        <div class="plantsGrid_boxitem6" style="background-image: url(img/plant6.jpeg);">
+        <div class="plantsGrid_boxitem" style="background-image: url(img/plant6.jpeg);">
             <h1>Ailanthus</h1>
+            <h2>Tropical</h2>
+        </div>
+    </div>
+
+    <div class="Nav_bottom">
+        <div class="Nav_bottom_box1">
+            <i class="fas fa-tree" style="font-size: 25px;"></i>
+        </div>
+        <div class="Nav_bottom_box2">
+            <i class="fas fa-shopping-cart" style="font-size: 25px;"></i>
+        </div>
+        <div class="Nav_bottom_box3">
+        <i class="fas fa-cog" style="font-size: 25px;"></i>
+        </div>
+        <div class="Nav_bottom_box4" style="font-size: 25px;">
+            <i class="fas fa-user-alt"></i>
         </div>
     </div>
   
