--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
@@ -38,7 +38,7 @@
             <h2>Suculent</h2>
         </div>
         <div class="plantsGrid_boxitem" style="background-image: url(img/plant3.jpeg);">
-            <h1>Prometheus</h1>
+            <h1>Prometus</h1>
             <h2>Fruity</h2>
         </div>
         <div class="plantsGrid_boxitem" style="background-image: url(img/plant4.jpeg);">
