--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/Index.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/Index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dist/style.css">
     <title>Document</title>
 </head>
 <body>
-<div id="landing"></div>
+<div id="landing">
+    <div id="landing__logo"></div>
+    <div id="landing__search"></div>
+    <div id="landing__task"></div>
+    <div id="landing__recent"></div>
+</div>
+<nav>
+</nav>
 </body>
 </html>
