end of nav. next - monthly tasks

--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/Etan.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/Etan.html
@@ -16,10 +16,10 @@
                 <div id="control__nav">
                     <nav>
                         <ul>
-                            <li><a href="#"><i class="material-icons white-color">home</i> </a></li>
-                            <li><a href="#"><i class="material-icons white-color">email</i> email</a></li>
-                            <li><a href="#"><i class="material-icons white-color">pie_chart</i> pie chart</a></li>
-                            <li id="monthly-tasks"><a href="#"><i class="material-icons white-color">grid_view</i> monthly tasks </a></li>
+                            <li><a href="#"><i class="material-icons white-color">home</i></a></li>
+                            <li><a href="#"><i class="material-icons white-color">email</i></a></li>
+                            <li><a href="#"><i class="material-icons white-color">pie_chart</i></a></li>
+                            <li id="monthly-tasks"><a href="#"><i class="material-icons white-color">grid_view</i></a></li>
                         </ul>
                     </nav>
                 </div>
