fixed the nav for everyone, works on all.
credit to tamir dadon

--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/Etan.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/Etan.html
@@ -10,16 +10,15 @@
     <title>Monthly Tasks</title>
 </head>
 <body>
-    <main>
-        <div id="landing">
+        <div class="landing">
             <div id="control">
                 <div id="control__nav">
                     <nav>
                         <ul>
-                            <li><a href="#"><i class="material-icons white-color">home</i></a></li>
+                            <li><a href="home.html"><i class="material-icons white-color">home</i></a></li>
                             <li><a href="#"><i class="material-icons white-color">email</i></a></li>
                             <li><a href="#"><i class="material-icons white-color">pie_chart</i></a></li>
-                            <li id="monthly-tasks"><a href="#"><i class="material-icons white-color">grid_view</i></a></li>
+                            <li id="monthly-tasks"><a href="Etan.html"><i class="material-icons white-color">grid_view</i></a></li>
                         </ul>
                     </nav>
                 </div>
@@ -29,7 +28,6 @@
             <div id="task__descr"></div>
             <div id="task__cal"></div>
         </div>
-    </main>
     
 </body>
 </html>
