--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/or.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/or.html
@@ -17,20 +17,20 @@
             <div id="control__nav">
                 <nav>
                     <ul>
-                        <li><a href="home.html"><i class="material-icons white-color">home</i></a></li>
+                        <li><a href="or.html"><i class="material-icons white-color">home</i></a></li>
                         <li><a href="#"><i class="material-icons white-color">email</i></a></li>
                         <li><a href="#"><i class="material-icons white-color">pie_chart</i></a></li>
-                        <li id="monthly-tasks"><a href="Etan.html"><i
-                                    class="material-icons white-color">grid_view</i></a></li>
+                        <li id="monthly-tasks"><a href="Etan.html"><i class="material-icons white-color">grid_view</i></a></li>
                     </ul>
                 </nav>
             </div>
+            <div id="control__mysasks"></div>
         </div>
-        <div id="landing__logo"></div>
-        <div id="landing__search"></div>
-        <div id="landing__task"></div>
-        <div id="landing__recent"></div>
+        <div id="task__count"></div>
+        <div id="task__descr"></div>
+        <div id="task__cal"></div>
     </div>
+
 </body>
 
 </html>
